--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-input-switch": "^2.2.2",
-    "react-scripts": "3.4.3"
+    "react-redux": "^7.2.5",
+    "react-scripts": "3.4.3",
+    "redux": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
